@@ -23,7 +23,8 @@
 package runtime.valhalla.inlinetypes;
 
 import java.lang.ref.*;
-import jdk.internal.value.PrimitiveClass;
+import jdk.internal.vm.annotation.ImplicitlyConstructible;
+import jdk.internal.vm.annotation.LooselyConsistentValue;
 
 
 /*
@@ -31,17 +32,23 @@ import jdk.internal.value.PrimitiveClass;
  * @requires vm.gc == null
  * @summary if_acmpeq/ne bytecode test
  * @modules java.base/jdk.internal.value
- * @compile -XDenablePrimitiveClasses Ifacmp.java
- * @run main/othervm -XX:+EnableValhalla -XX:+EnablePrimitiveClasses -Xms16m -Xmx16m -XX:+UseSerialGC
+ *          java.base/jdk.internal.vm.annotation
+ * @compile --source 22 --enable-preview Ifacmp.java
+ * @run main/othervm --enable-preview
+ *                   -XX:+EnableValhalla -Xms16m -Xmx16m -XX:+UseSerialGC
  *                   runtime.valhalla.inlinetypes.Ifacmp
  */
 public class Ifacmp {
 
-    static primitive class MyValue {
+    @ImplicitlyConstructible
+    @LooselyConsistentValue
+    static value class MyValue {
         int value;
         public MyValue(int v) { this.value = v; }
     };
-    static primitive class MyValue2 {
+    @ImplicitlyConstructible
+    @LooselyConsistentValue
+    static value class MyValue2 {
         int value;
         public MyValue2(int v) { this.value = v; }
     };
@@ -178,7 +185,7 @@ public class Ifacmp {
     }
 
     boolean shouldEqualSelf(Object a) {
-        return acmpModeInlineAlwaysFalse ? (!(a != null && PrimitiveClass.isPrimitiveClass(a.getClass()))) : true;
+        return acmpModeInlineAlwaysFalse ? (!(a != null && a.getClass().isValue())) : true;
     }
 
     void checkEqual(Object a, Object b, boolean isEqual) {
